tests/ui/compile_fail/unknown_key.rs
use bevy_plugin_builder::define_plugin;

define_plugin!(UnknownKeyPlugin {
    not_a_real_option: [u32]
});

fn main() {}
